parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMI_COLON dec_v dec_f MAIN body END
Rule 2     vars -> VAR variables COLON type SEMI_COLON mas_var
Rule 3     vars -> empty
Rule 4     variables -> list_ids
Rule 5     mas_var -> variables COLON type SEMI_COLON mas_var
Rule 6     mas_var -> empty
Rule 7     list_ids -> ID mas_ids
Rule 8     mas_ids -> COMMA list_ids
Rule 9     mas_ids -> empty
Rule 10    type -> INT
Rule 11    type -> FLOAT
Rule 12    dec_v -> vars
Rule 13    dec_f -> funcs mas_f
Rule 14    dec_f -> empty
Rule 15    mas_f -> funcs mas_f
Rule 16    mas_f -> empty
Rule 17    body -> LEFT_CURLY mas_statement RIGHT_CURLY
Rule 18    mas_statement -> statement mas_statement
Rule 19    mas_statement -> empty
Rule 20    statement -> assign
Rule 21    statement -> condition
Rule 22    statement -> cycle
Rule 23    statement -> f_call
Rule 24    statement -> print
Rule 25    assign -> ID EQUAL expresion SEMI_COLON
Rule 26    expresion -> exp mas_expresion
Rule 27    mas_expresion -> MORE_THAN exp
Rule 28    mas_expresion -> LESS_THAN exp
Rule 29    mas_expresion -> NOT_EQUAL exp
Rule 30    mas_expresion -> empty
Rule 31    exp -> termino mas_exp
Rule 32    mas_exp -> ADD termino
Rule 33    mas_exp -> SUBTRACT termino
Rule 34    mas_exp -> empty
Rule 35    termino -> factor mas_termino
Rule 36    mas_termino -> MULTIPLY factor
Rule 37    mas_termino -> DIVIDE factor
Rule 38    mas_termino -> empty
Rule 39    factor -> mas_factor
Rule 40    mas_factor -> OPEN_PAR expresion CLOSE_PAR
Rule 41    mas_factor -> signo ID
Rule 42    mas_factor -> signo cte
Rule 43    mas_factor -> ADD cte
Rule 44    mas_factor -> SUBTRACT cte
Rule 45    signo -> ADD
Rule 46    signo -> SUBTRACT
Rule 47    signo -> empty
Rule 48    cte -> CTE_STRING
Rule 49    cte -> CTE_FLOAT
Rule 50    cte -> CTE_INT
Rule 51    print -> PRINT OPEN_PAR expresion mas_print CLOSE_PAR SEMI_COLON
Rule 52    print -> PRINT OPEN_PAR CTE_STRING mas_print CLOSE_PAR SEMI_COLON
Rule 53    mas_print -> COMMA expresion mas_print
Rule 54    mas_print -> CTE_STRING mas_print
Rule 55    mas_print -> empty
Rule 56    cycle -> DO body WHILE OPEN_PAR expresion CLOSE_PAR SEMI_COLON
Rule 57    condition -> IF OPEN_PAR expresion CLOSE_PAR body mas_condition SEMI_COLON
Rule 58    mas_condition -> ELSE body
Rule 59    mas_condition -> empty
Rule 60    f_call -> ID OPEN_PAR expresion mas_f_call CLOSE_PAR SEMI_COLON
Rule 61    mas_f_call -> COMMA expresion
Rule 62    mas_f_call -> empty
Rule 63    funcs -> VOID ID OPEN_PAR params CLOSE_PAR L_BRACKET vars body R_BRACKET SEMI_COLON
Rule 64    params -> ID COLON type
Rule 65    params -> ID COLON type mas_params
Rule 66    params -> empty
Rule 67    mas_params -> COMMA params
Rule 68    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 32 43 45
CLOSE_PAR            : 40 51 52 56 57 60 63
COLON                : 2 5 64 65
COMMA                : 8 53 61 67
CTE_FLOAT            : 49
CTE_INT              : 50
CTE_STRING           : 48 52 54
DIVIDE               : 37
DO                   : 56
ELSE                 : 58
END                  : 1
EQUAL                : 25
FLOAT                : 11
ID                   : 1 7 25 41 60 63 64 65
IF                   : 57
INT                  : 10
LEFT_CURLY           : 17
LESS_THAN            : 28
L_BRACKET            : 63
MAIN                 : 1
MORE_THAN            : 27
MULTIPLY             : 36
NOT_EQUAL            : 29
OPEN_PAR             : 40 51 52 56 57 60 63
PRINT                : 51 52
PROGRAM              : 1
RIGHT_CURLY          : 17
R_BRACKET            : 63
SEMI_COLON           : 1 2 5 25 51 52 56 57 60 63
SUBTRACT             : 33 44 46
VAR                  : 2
VOID                 : 63
WHILE                : 56
error                : 

Nonterminals, with rules where they appear

assign               : 20
body                 : 1 56 57 58 63
condition            : 21
cte                  : 42 43 44
cycle                : 22
dec_f                : 1
dec_v                : 1
empty                : 3 6 9 14 16 19 30 34 38 47 55 59 62 66
exp                  : 26 27 28 29
expresion            : 25 40 51 53 56 57 60 61
f_call               : 23
factor               : 35 36 37
funcs                : 13 15
list_ids             : 4 8
mas_condition        : 57
mas_exp              : 31
mas_expresion        : 26
mas_f                : 13 15
mas_f_call           : 60
mas_factor           : 39
mas_ids              : 7
mas_params           : 65
mas_print            : 51 52 53 54
mas_statement        : 17 18
mas_termino          : 35
mas_var              : 2 5
params               : 63 67
print                : 24
programa             : 0
signo                : 41 42
statement            : 18
termino              : 31 32 33
type                 : 2 5 64 65
variables            : 2 5
vars                 : 12 63

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMI_COLON dec_v dec_f MAIN body END

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMI_COLON dec_v dec_f MAIN body END

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMI_COLON dec_v dec_f MAIN body END

    SEMI_COLON      shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMI_COLON . dec_v dec_f MAIN body END
    (12) dec_v -> . vars
    (2) vars -> . VAR variables COLON type SEMI_COLON mas_var
    (3) vars -> . empty
    (68) empty -> .

    VAR             shift and go to state 7
    VOID            reduce using rule 68 (empty -> .)
    MAIN            reduce using rule 68 (empty -> .)

    dec_v                          shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) programa -> PROGRAM ID SEMI_COLON dec_v . dec_f MAIN body END
    (13) dec_f -> . funcs mas_f
    (14) dec_f -> . empty
    (63) funcs -> . VOID ID OPEN_PAR params CLOSE_PAR L_BRACKET vars body R_BRACKET SEMI_COLON
    (68) empty -> .

    VOID            shift and go to state 12
    MAIN            reduce using rule 68 (empty -> .)

    dec_f                          shift and go to state 9
    funcs                          shift and go to state 10
    empty                          shift and go to state 11

state 6

    (12) dec_v -> vars .

    VOID            reduce using rule 12 (dec_v -> vars .)
    MAIN            reduce using rule 12 (dec_v -> vars .)


state 7

    (2) vars -> VAR . variables COLON type SEMI_COLON mas_var
    (4) variables -> . list_ids
    (7) list_ids -> . ID mas_ids

    ID              shift and go to state 15

    variables                      shift and go to state 13
    list_ids                       shift and go to state 14

state 8

    (3) vars -> empty .

    VOID            reduce using rule 3 (vars -> empty .)
    MAIN            reduce using rule 3 (vars -> empty .)
    LEFT_CURLY      reduce using rule 3 (vars -> empty .)


state 9

    (1) programa -> PROGRAM ID SEMI_COLON dec_v dec_f . MAIN body END

    MAIN            shift and go to state 16


state 10

    (13) dec_f -> funcs . mas_f
    (15) mas_f -> . funcs mas_f
    (16) mas_f -> . empty
    (63) funcs -> . VOID ID OPEN_PAR params CLOSE_PAR L_BRACKET vars body R_BRACKET SEMI_COLON
    (68) empty -> .

    VOID            shift and go to state 12
    MAIN            reduce using rule 68 (empty -> .)

    funcs                          shift and go to state 17
    mas_f                          shift and go to state 18
    empty                          shift and go to state 19

state 11

    (14) dec_f -> empty .

    MAIN            reduce using rule 14 (dec_f -> empty .)


state 12

    (63) funcs -> VOID . ID OPEN_PAR params CLOSE_PAR L_BRACKET vars body R_BRACKET SEMI_COLON

    ID              shift and go to state 20


state 13

    (2) vars -> VAR variables . COLON type SEMI_COLON mas_var

    COLON           shift and go to state 21


state 14

    (4) variables -> list_ids .

    COLON           reduce using rule 4 (variables -> list_ids .)


state 15

    (7) list_ids -> ID . mas_ids
    (8) mas_ids -> . COMMA list_ids
    (9) mas_ids -> . empty
    (68) empty -> .

    COMMA           shift and go to state 23
    COLON           reduce using rule 68 (empty -> .)

    mas_ids                        shift and go to state 22
    empty                          shift and go to state 24

state 16

    (1) programa -> PROGRAM ID SEMI_COLON dec_v dec_f MAIN . body END
    (17) body -> . LEFT_CURLY mas_statement RIGHT_CURLY

    LEFT_CURLY      shift and go to state 26

    body                           shift and go to state 25

state 17

    (15) mas_f -> funcs . mas_f
    (15) mas_f -> . funcs mas_f
    (16) mas_f -> . empty
    (63) funcs -> . VOID ID OPEN_PAR params CLOSE_PAR L_BRACKET vars body R_BRACKET SEMI_COLON
    (68) empty -> .

    VOID            shift and go to state 12
    MAIN            reduce using rule 68 (empty -> .)

    funcs                          shift and go to state 17
    mas_f                          shift and go to state 27
    empty                          shift and go to state 19

state 18

    (13) dec_f -> funcs mas_f .

    MAIN            reduce using rule 13 (dec_f -> funcs mas_f .)


state 19

    (16) mas_f -> empty .

    MAIN            reduce using rule 16 (mas_f -> empty .)


state 20

    (63) funcs -> VOID ID . OPEN_PAR params CLOSE_PAR L_BRACKET vars body R_BRACKET SEMI_COLON

    OPEN_PAR        shift and go to state 28


state 21

    (2) vars -> VAR variables COLON . type SEMI_COLON mas_var
    (10) type -> . INT
    (11) type -> . FLOAT

    INT             shift and go to state 30
    FLOAT           shift and go to state 31

    type                           shift and go to state 29

state 22

    (7) list_ids -> ID mas_ids .

    COLON           reduce using rule 7 (list_ids -> ID mas_ids .)


state 23

    (8) mas_ids -> COMMA . list_ids
    (7) list_ids -> . ID mas_ids

    ID              shift and go to state 15

    list_ids                       shift and go to state 32

state 24

    (9) mas_ids -> empty .

    COLON           reduce using rule 9 (mas_ids -> empty .)


state 25

    (1) programa -> PROGRAM ID SEMI_COLON dec_v dec_f MAIN body . END

    END             shift and go to state 33


state 26

    (17) body -> LEFT_CURLY . mas_statement RIGHT_CURLY
    (18) mas_statement -> . statement mas_statement
    (19) mas_statement -> . empty
    (20) statement -> . assign
    (21) statement -> . condition
    (22) statement -> . cycle
    (23) statement -> . f_call
    (24) statement -> . print
    (68) empty -> .
    (25) assign -> . ID EQUAL expresion SEMI_COLON
    (57) condition -> . IF OPEN_PAR expresion CLOSE_PAR body mas_condition SEMI_COLON
    (56) cycle -> . DO body WHILE OPEN_PAR expresion CLOSE_PAR SEMI_COLON
    (60) f_call -> . ID OPEN_PAR expresion mas_f_call CLOSE_PAR SEMI_COLON
    (51) print -> . PRINT OPEN_PAR expresion mas_print CLOSE_PAR SEMI_COLON
    (52) print -> . PRINT OPEN_PAR CTE_STRING mas_print CLOSE_PAR SEMI_COLON

    RIGHT_CURLY     reduce using rule 68 (empty -> .)
    ID              shift and go to state 42
    IF              shift and go to state 43
    DO              shift and go to state 44
    PRINT           shift and go to state 45

    mas_statement                  shift and go to state 34
    statement                      shift and go to state 35
    empty                          shift and go to state 36
    assign                         shift and go to state 37
    condition                      shift and go to state 38
    cycle                          shift and go to state 39
    f_call                         shift and go to state 40
    print                          shift and go to state 41

state 27

    (15) mas_f -> funcs mas_f .

    MAIN            reduce using rule 15 (mas_f -> funcs mas_f .)


state 28

    (63) funcs -> VOID ID OPEN_PAR . params CLOSE_PAR L_BRACKET vars body R_BRACKET SEMI_COLON
    (64) params -> . ID COLON type
    (65) params -> . ID COLON type mas_params
    (66) params -> . empty
    (68) empty -> .

    ID              shift and go to state 46
    CLOSE_PAR       reduce using rule 68 (empty -> .)

    params                         shift and go to state 47
    empty                          shift and go to state 48

state 29

    (2) vars -> VAR variables COLON type . SEMI_COLON mas_var

    SEMI_COLON      shift and go to state 49


state 30

    (10) type -> INT .

    SEMI_COLON      reduce using rule 10 (type -> INT .)
    COMMA           reduce using rule 10 (type -> INT .)
    CLOSE_PAR       reduce using rule 10 (type -> INT .)


state 31

    (11) type -> FLOAT .

    SEMI_COLON      reduce using rule 11 (type -> FLOAT .)
    COMMA           reduce using rule 11 (type -> FLOAT .)
    CLOSE_PAR       reduce using rule 11 (type -> FLOAT .)


state 32

    (8) mas_ids -> COMMA list_ids .

    COLON           reduce using rule 8 (mas_ids -> COMMA list_ids .)


state 33

    (1) programa -> PROGRAM ID SEMI_COLON dec_v dec_f MAIN body END .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMI_COLON dec_v dec_f MAIN body END .)


state 34

    (17) body -> LEFT_CURLY mas_statement . RIGHT_CURLY

    RIGHT_CURLY     shift and go to state 50


state 35

    (18) mas_statement -> statement . mas_statement
    (18) mas_statement -> . statement mas_statement
    (19) mas_statement -> . empty
    (20) statement -> . assign
    (21) statement -> . condition
    (22) statement -> . cycle
    (23) statement -> . f_call
    (24) statement -> . print
    (68) empty -> .
    (25) assign -> . ID EQUAL expresion SEMI_COLON
    (57) condition -> . IF OPEN_PAR expresion CLOSE_PAR body mas_condition SEMI_COLON
    (56) cycle -> . DO body WHILE OPEN_PAR expresion CLOSE_PAR SEMI_COLON
    (60) f_call -> . ID OPEN_PAR expresion mas_f_call CLOSE_PAR SEMI_COLON
    (51) print -> . PRINT OPEN_PAR expresion mas_print CLOSE_PAR SEMI_COLON
    (52) print -> . PRINT OPEN_PAR CTE_STRING mas_print CLOSE_PAR SEMI_COLON

    RIGHT_CURLY     reduce using rule 68 (empty -> .)
    ID              shift and go to state 42
    IF              shift and go to state 43
    DO              shift and go to state 44
    PRINT           shift and go to state 45

    statement                      shift and go to state 35
    mas_statement                  shift and go to state 51
    empty                          shift and go to state 36
    assign                         shift and go to state 37
    condition                      shift and go to state 38
    cycle                          shift and go to state 39
    f_call                         shift and go to state 40
    print                          shift and go to state 41

state 36

    (19) mas_statement -> empty .

    RIGHT_CURLY     reduce using rule 19 (mas_statement -> empty .)


state 37

    (20) statement -> assign .

    ID              reduce using rule 20 (statement -> assign .)
    IF              reduce using rule 20 (statement -> assign .)
    DO              reduce using rule 20 (statement -> assign .)
    PRINT           reduce using rule 20 (statement -> assign .)
    RIGHT_CURLY     reduce using rule 20 (statement -> assign .)


state 38

    (21) statement -> condition .

    ID              reduce using rule 21 (statement -> condition .)
    IF              reduce using rule 21 (statement -> condition .)
    DO              reduce using rule 21 (statement -> condition .)
    PRINT           reduce using rule 21 (statement -> condition .)
    RIGHT_CURLY     reduce using rule 21 (statement -> condition .)


state 39

    (22) statement -> cycle .

    ID              reduce using rule 22 (statement -> cycle .)
    IF              reduce using rule 22 (statement -> cycle .)
    DO              reduce using rule 22 (statement -> cycle .)
    PRINT           reduce using rule 22 (statement -> cycle .)
    RIGHT_CURLY     reduce using rule 22 (statement -> cycle .)


state 40

    (23) statement -> f_call .

    ID              reduce using rule 23 (statement -> f_call .)
    IF              reduce using rule 23 (statement -> f_call .)
    DO              reduce using rule 23 (statement -> f_call .)
    PRINT           reduce using rule 23 (statement -> f_call .)
    RIGHT_CURLY     reduce using rule 23 (statement -> f_call .)


state 41

    (24) statement -> print .

    ID              reduce using rule 24 (statement -> print .)
    IF              reduce using rule 24 (statement -> print .)
    DO              reduce using rule 24 (statement -> print .)
    PRINT           reduce using rule 24 (statement -> print .)
    RIGHT_CURLY     reduce using rule 24 (statement -> print .)


state 42

    (25) assign -> ID . EQUAL expresion SEMI_COLON
    (60) f_call -> ID . OPEN_PAR expresion mas_f_call CLOSE_PAR SEMI_COLON

    EQUAL           shift and go to state 52
    OPEN_PAR        shift and go to state 53


state 43

    (57) condition -> IF . OPEN_PAR expresion CLOSE_PAR body mas_condition SEMI_COLON

    OPEN_PAR        shift and go to state 54


state 44

    (56) cycle -> DO . body WHILE OPEN_PAR expresion CLOSE_PAR SEMI_COLON
    (17) body -> . LEFT_CURLY mas_statement RIGHT_CURLY

    LEFT_CURLY      shift and go to state 26

    body                           shift and go to state 55

state 45

    (51) print -> PRINT . OPEN_PAR expresion mas_print CLOSE_PAR SEMI_COLON
    (52) print -> PRINT . OPEN_PAR CTE_STRING mas_print CLOSE_PAR SEMI_COLON

    OPEN_PAR        shift and go to state 56


state 46

    (64) params -> ID . COLON type
    (65) params -> ID . COLON type mas_params

    COLON           shift and go to state 57


state 47

    (63) funcs -> VOID ID OPEN_PAR params . CLOSE_PAR L_BRACKET vars body R_BRACKET SEMI_COLON

    CLOSE_PAR       shift and go to state 58


state 48

    (66) params -> empty .

    CLOSE_PAR       reduce using rule 66 (params -> empty .)


state 49

    (2) vars -> VAR variables COLON type SEMI_COLON . mas_var
    (5) mas_var -> . variables COLON type SEMI_COLON mas_var
    (6) mas_var -> . empty
    (4) variables -> . list_ids
    (68) empty -> .
    (7) list_ids -> . ID mas_ids

    VOID            reduce using rule 68 (empty -> .)
    MAIN            reduce using rule 68 (empty -> .)
    LEFT_CURLY      reduce using rule 68 (empty -> .)
    ID              shift and go to state 15

    variables                      shift and go to state 59
    mas_var                        shift and go to state 60
    empty                          shift and go to state 61
    list_ids                       shift and go to state 14

state 50

    (17) body -> LEFT_CURLY mas_statement RIGHT_CURLY .

    END             reduce using rule 17 (body -> LEFT_CURLY mas_statement RIGHT_CURLY .)
    WHILE           reduce using rule 17 (body -> LEFT_CURLY mas_statement RIGHT_CURLY .)
    ELSE            reduce using rule 17 (body -> LEFT_CURLY mas_statement RIGHT_CURLY .)
    SEMI_COLON      reduce using rule 17 (body -> LEFT_CURLY mas_statement RIGHT_CURLY .)
    R_BRACKET       reduce using rule 17 (body -> LEFT_CURLY mas_statement RIGHT_CURLY .)


state 51

    (18) mas_statement -> statement mas_statement .

    RIGHT_CURLY     reduce using rule 18 (mas_statement -> statement mas_statement .)


state 52

    (25) assign -> ID EQUAL . expresion SEMI_COLON
    (26) expresion -> . exp mas_expresion
    (31) exp -> . termino mas_exp
    (35) termino -> . factor mas_termino
    (39) factor -> . mas_factor
    (40) mas_factor -> . OPEN_PAR expresion CLOSE_PAR
    (41) mas_factor -> . signo ID
    (42) mas_factor -> . signo cte
    (43) mas_factor -> . ADD cte
    (44) mas_factor -> . SUBTRACT cte
    (45) signo -> . ADD
    (46) signo -> . SUBTRACT
    (47) signo -> . empty
    (68) empty -> .

    OPEN_PAR        shift and go to state 67
    ADD             shift and go to state 69
    SUBTRACT        shift and go to state 70
    ID              reduce using rule 68 (empty -> .)
    CTE_STRING      reduce using rule 68 (empty -> .)
    CTE_FLOAT       reduce using rule 68 (empty -> .)
    CTE_INT         reduce using rule 68 (empty -> .)

    expresion                      shift and go to state 62
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 65
    mas_factor                     shift and go to state 66
    signo                          shift and go to state 68
    empty                          shift and go to state 71

state 53

    (60) f_call -> ID OPEN_PAR . expresion mas_f_call CLOSE_PAR SEMI_COLON
    (26) expresion -> . exp mas_expresion
    (31) exp -> . termino mas_exp
    (35) termino -> . factor mas_termino
    (39) factor -> . mas_factor
    (40) mas_factor -> . OPEN_PAR expresion CLOSE_PAR
    (41) mas_factor -> . signo ID
    (42) mas_factor -> . signo cte
    (43) mas_factor -> . ADD cte
    (44) mas_factor -> . SUBTRACT cte
    (45) signo -> . ADD
    (46) signo -> . SUBTRACT
    (47) signo -> . empty
    (68) empty -> .

    OPEN_PAR        shift and go to state 67
    ADD             shift and go to state 69
    SUBTRACT        shift and go to state 70
    ID              reduce using rule 68 (empty -> .)
    CTE_STRING      reduce using rule 68 (empty -> .)
    CTE_FLOAT       reduce using rule 68 (empty -> .)
    CTE_INT         reduce using rule 68 (empty -> .)

    expresion                      shift and go to state 72
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 65
    mas_factor                     shift and go to state 66
    signo                          shift and go to state 68
    empty                          shift and go to state 71

state 54

    (57) condition -> IF OPEN_PAR . expresion CLOSE_PAR body mas_condition SEMI_COLON
    (26) expresion -> . exp mas_expresion
    (31) exp -> . termino mas_exp
    (35) termino -> . factor mas_termino
    (39) factor -> . mas_factor
    (40) mas_factor -> . OPEN_PAR expresion CLOSE_PAR
    (41) mas_factor -> . signo ID
    (42) mas_factor -> . signo cte
    (43) mas_factor -> . ADD cte
    (44) mas_factor -> . SUBTRACT cte
    (45) signo -> . ADD
    (46) signo -> . SUBTRACT
    (47) signo -> . empty
    (68) empty -> .

    OPEN_PAR        shift and go to state 67
    ADD             shift and go to state 69
    SUBTRACT        shift and go to state 70
    ID              reduce using rule 68 (empty -> .)
    CTE_STRING      reduce using rule 68 (empty -> .)
    CTE_FLOAT       reduce using rule 68 (empty -> .)
    CTE_INT         reduce using rule 68 (empty -> .)

    expresion                      shift and go to state 73
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 65
    mas_factor                     shift and go to state 66
    signo                          shift and go to state 68
    empty                          shift and go to state 71

state 55

    (56) cycle -> DO body . WHILE OPEN_PAR expresion CLOSE_PAR SEMI_COLON

    WHILE           shift and go to state 74


state 56

    (51) print -> PRINT OPEN_PAR . expresion mas_print CLOSE_PAR SEMI_COLON
    (52) print -> PRINT OPEN_PAR . CTE_STRING mas_print CLOSE_PAR SEMI_COLON
    (26) expresion -> . exp mas_expresion
    (31) exp -> . termino mas_exp
    (35) termino -> . factor mas_termino
    (39) factor -> . mas_factor
    (40) mas_factor -> . OPEN_PAR expresion CLOSE_PAR
    (41) mas_factor -> . signo ID
    (42) mas_factor -> . signo cte
    (43) mas_factor -> . ADD cte
    (44) mas_factor -> . SUBTRACT cte
    (45) signo -> . ADD
    (46) signo -> . SUBTRACT
    (47) signo -> . empty
    (68) empty -> .

  ! shift/reduce conflict for CTE_STRING resolved as shift
    CTE_STRING      shift and go to state 76
    OPEN_PAR        shift and go to state 67
    ADD             shift and go to state 69
    SUBTRACT        shift and go to state 70
    ID              reduce using rule 68 (empty -> .)
    CTE_FLOAT       reduce using rule 68 (empty -> .)
    CTE_INT         reduce using rule 68 (empty -> .)

  ! CTE_STRING      [ reduce using rule 68 (empty -> .) ]

    expresion                      shift and go to state 75
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 65
    mas_factor                     shift and go to state 66
    signo                          shift and go to state 68
    empty                          shift and go to state 71

state 57

    (64) params -> ID COLON . type
    (65) params -> ID COLON . type mas_params
    (10) type -> . INT
    (11) type -> . FLOAT

    INT             shift and go to state 30
    FLOAT           shift and go to state 31

    type                           shift and go to state 77

state 58

    (63) funcs -> VOID ID OPEN_PAR params CLOSE_PAR . L_BRACKET vars body R_BRACKET SEMI_COLON

    L_BRACKET       shift and go to state 78


state 59

    (5) mas_var -> variables . COLON type SEMI_COLON mas_var

    COLON           shift and go to state 79


state 60

    (2) vars -> VAR variables COLON type SEMI_COLON mas_var .

    VOID            reduce using rule 2 (vars -> VAR variables COLON type SEMI_COLON mas_var .)
    MAIN            reduce using rule 2 (vars -> VAR variables COLON type SEMI_COLON mas_var .)
    LEFT_CURLY      reduce using rule 2 (vars -> VAR variables COLON type SEMI_COLON mas_var .)


state 61

    (6) mas_var -> empty .

    VOID            reduce using rule 6 (mas_var -> empty .)
    MAIN            reduce using rule 6 (mas_var -> empty .)
    LEFT_CURLY      reduce using rule 6 (mas_var -> empty .)


state 62

    (25) assign -> ID EQUAL expresion . SEMI_COLON

    SEMI_COLON      shift and go to state 80


state 63

    (26) expresion -> exp . mas_expresion
    (27) mas_expresion -> . MORE_THAN exp
    (28) mas_expresion -> . LESS_THAN exp
    (29) mas_expresion -> . NOT_EQUAL exp
    (30) mas_expresion -> . empty
    (68) empty -> .

    MORE_THAN       shift and go to state 82
    LESS_THAN       shift and go to state 83
    NOT_EQUAL       shift and go to state 84
    SEMI_COLON      reduce using rule 68 (empty -> .)
    COMMA           reduce using rule 68 (empty -> .)
    CLOSE_PAR       reduce using rule 68 (empty -> .)
    CTE_STRING      reduce using rule 68 (empty -> .)

    mas_expresion                  shift and go to state 81
    empty                          shift and go to state 85

state 64

    (31) exp -> termino . mas_exp
    (32) mas_exp -> . ADD termino
    (33) mas_exp -> . SUBTRACT termino
    (34) mas_exp -> . empty
    (68) empty -> .

    ADD             shift and go to state 87
    SUBTRACT        shift and go to state 88
    MORE_THAN       reduce using rule 68 (empty -> .)
    LESS_THAN       reduce using rule 68 (empty -> .)
    NOT_EQUAL       reduce using rule 68 (empty -> .)
    SEMI_COLON      reduce using rule 68 (empty -> .)
    COMMA           reduce using rule 68 (empty -> .)
    CLOSE_PAR       reduce using rule 68 (empty -> .)
    CTE_STRING      reduce using rule 68 (empty -> .)

    mas_exp                        shift and go to state 86
    empty                          shift and go to state 89

state 65

    (35) termino -> factor . mas_termino
    (36) mas_termino -> . MULTIPLY factor
    (37) mas_termino -> . DIVIDE factor
    (38) mas_termino -> . empty
    (68) empty -> .

    MULTIPLY        shift and go to state 91
    DIVIDE          shift and go to state 92
    ADD             reduce using rule 68 (empty -> .)
    SUBTRACT        reduce using rule 68 (empty -> .)
    MORE_THAN       reduce using rule 68 (empty -> .)
    LESS_THAN       reduce using rule 68 (empty -> .)
    NOT_EQUAL       reduce using rule 68 (empty -> .)
    SEMI_COLON      reduce using rule 68 (empty -> .)
    COMMA           reduce using rule 68 (empty -> .)
    CLOSE_PAR       reduce using rule 68 (empty -> .)
    CTE_STRING      reduce using rule 68 (empty -> .)

    mas_termino                    shift and go to state 90
    empty                          shift and go to state 93

state 66

    (39) factor -> mas_factor .

    MULTIPLY        reduce using rule 39 (factor -> mas_factor .)
    DIVIDE          reduce using rule 39 (factor -> mas_factor .)
    ADD             reduce using rule 39 (factor -> mas_factor .)
    SUBTRACT        reduce using rule 39 (factor -> mas_factor .)
    MORE_THAN       reduce using rule 39 (factor -> mas_factor .)
    LESS_THAN       reduce using rule 39 (factor -> mas_factor .)
    NOT_EQUAL       reduce using rule 39 (factor -> mas_factor .)
    SEMI_COLON      reduce using rule 39 (factor -> mas_factor .)
    COMMA           reduce using rule 39 (factor -> mas_factor .)
    CLOSE_PAR       reduce using rule 39 (factor -> mas_factor .)
    CTE_STRING      reduce using rule 39 (factor -> mas_factor .)


state 67

    (40) mas_factor -> OPEN_PAR . expresion CLOSE_PAR
    (26) expresion -> . exp mas_expresion
    (31) exp -> . termino mas_exp
    (35) termino -> . factor mas_termino
    (39) factor -> . mas_factor
    (40) mas_factor -> . OPEN_PAR expresion CLOSE_PAR
    (41) mas_factor -> . signo ID
    (42) mas_factor -> . signo cte
    (43) mas_factor -> . ADD cte
    (44) mas_factor -> . SUBTRACT cte
    (45) signo -> . ADD
    (46) signo -> . SUBTRACT
    (47) signo -> . empty
    (68) empty -> .

    OPEN_PAR        shift and go to state 67
    ADD             shift and go to state 69
    SUBTRACT        shift and go to state 70
    ID              reduce using rule 68 (empty -> .)
    CTE_STRING      reduce using rule 68 (empty -> .)
    CTE_FLOAT       reduce using rule 68 (empty -> .)
    CTE_INT         reduce using rule 68 (empty -> .)

    expresion                      shift and go to state 94
    exp                            shift and go to state 63
    termino                        shift and go to state 64
    factor                         shift and go to state 65
    mas_factor                     shift and go to state 66
    signo                          shift and go to state 68
    empty                          shift and go to state 71

state 68

    (41) mas_factor -> signo . ID
    (42) mas_factor -> signo . cte
    (48) cte -> . CTE_STRING
    (49) cte -> . CTE_FLOAT
    (50) cte -> . CTE_INT

    ID              shift and go to state 95
    CTE_STRING      shift and go to state 97
    CTE_FLOAT       shift and go to state 98
    CTE_INT         shift and go to state 99

    cte                            shift and go to state 96

state 69

    (43) mas_factor -> ADD . cte
    (45) signo -> ADD .
    (48) cte -> . CTE_STRING
    (49) cte -> . CTE_FLOAT
    (50) cte -> . CTE_INT

  ! shift/reduce conflict for CTE_STRING resolved as shift
  ! shift/reduce conflict for CTE_FLOAT resolved as shift
  ! shift/reduce conflict for CTE_INT resolved as shift
    ID              reduce using rule 45 (signo -> ADD .)
    CTE_STRING      shift and go to state 97
    CTE_FLOAT       shift and go to state 98
    CTE_INT         shift and go to state 99

  ! CTE_STRING      [ reduce using rule 45 (signo -> ADD .) ]
  ! CTE_FLOAT       [ reduce using rule 45 (signo -> ADD .) ]
  ! CTE_INT         [ reduce using rule 45 (signo -> ADD .) ]

    cte                            shift and go to state 100

state 70

    (44) mas_factor -> SUBTRACT . cte
    (46) signo -> SUBTRACT .
    (48) cte -> . CTE_STRING
    (49) cte -> . CTE_FLOAT
    (50) cte -> . CTE_INT

  ! shift/reduce conflict for CTE_STRING resolved as shift
  ! shift/reduce conflict for CTE_FLOAT resolved as shift
  ! shift/reduce conflict for CTE_INT resolved as shift
    ID              reduce using rule 46 (signo -> SUBTRACT .)
    CTE_STRING      shift and go to state 97
    CTE_FLOAT       shift and go to state 98
    CTE_INT         shift and go to state 99

  ! CTE_STRING      [ reduce using rule 46 (signo -> SUBTRACT .) ]
  ! CTE_FLOAT       [ reduce using rule 46 (signo -> SUBTRACT .) ]
  ! CTE_INT         [ reduce using rule 46 (signo -> SUBTRACT .) ]

    cte                            shift and go to state 101

state 71

    (47) signo -> empty .

    ID              reduce using rule 47 (signo -> empty .)
    CTE_STRING      reduce using rule 47 (signo -> empty .)
    CTE_FLOAT       reduce using rule 47 (signo -> empty .)
    CTE_INT         reduce using rule 47 (signo -> empty .)


state 72

    (60) f_call -> ID OPEN_PAR expresion . mas_f_call CLOSE_PAR SEMI_COLON
    (61) mas_f_call -> . COMMA expresion
    (62) mas_f_call -> . empty
    (68) empty -> .

    COMMA           shift and go to state 103
    CLOSE_PAR       reduce using rule 68 (empty -> .)

    mas_f_call                     shift and go to state 102
    empty                          shift and go to state 104

state 73

    (57) condition -> IF OPEN_PAR expresion . CLOSE_PAR body mas_condition SEMI_COLON

    CLOSE_PAR       shift and go to state 105


state 74

    (56) cycle -> DO body WHILE . OPEN_PAR expresion CLOSE_PAR SEMI_COLON

    OPEN_PAR        shift and go to state 106


state 75
